# ODEs_on_GPUs

./: CMakeLists.txt  README.md  log.hpp  profiler.hpp
lorenz/: CMakeLists.txt  lorenz  lorenz_cpu_v2.cpp  lorenz_single.cpp  lorenz_thrust_v1.cu  lorenz_vexcl_v1.cpp  lorenz_vexcl_v2.cpp  lorenz_vexcl_v3.cpp  run_cpu_tests.sh  run_gpu_tests.sh
md/: CMakeLists.txt  mdc_cpu_v1.cpp  mdc_cpu_v2.cpp  mdc_thrust_v1.cu  mdc_thrust_v2.cu  mdc_vexcl_v1.cpp  mdc_vexcl_v2.cpp  point_type.hpp  run_cpu_tests.sh  run_gpu_tests.sh
ncwg/: CMakeLists.txt  container_algebra.hpp  default_operations.hpp  resize.hpp  runge_kutta4.hpp  simple_runge_kutta4.hpp  thrust_algebra.hpp  thrust_operations.hpp  vector_space_algebra.hpp  vexcl_resize.hpp
oscillators/: CMakeLists.txt  po_thrust.cu  po_vexcl.cpp  run_cpu_tests.sh  run_gpu_tests.sh
